[package]
name = "slinkylib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internals
schnorrkel = "0.11.4"
rand = "0.8.5"

blake3 = "1.5.1"
sha2 = "0.10.8"
blake2-rfc = "0.2.18"

# Encoding
hex = "0.4.3"
base32 = "0.5.0"
bs58 = "0.5.1"

# Web 3.0
ipfs-api = "0.17.0"
ipfs-api-prelude = "0.6.0"
ipfs-api-backend-actix = "0.7"

tokio = { version = "1", features = ["full"] }  # Ensure Tokio runtime support

